--- a/frontend/src/assets/styles/components/slider.css
+++ b/frontend/src/assets/styles/components/slider.css
@@ -13,104 +13,102 @@
   margin-right: 0;
 }
   
-  .carousel__carouseles {
-    display: flex; /* Esto coloca los elementos uno al lado del otro en fila */
-    width: 300%; /* Ancho basado en la cantidad de imágenes (ajústalo si añades más imágenes) */
-    height: 100%;
-    transition: transform 2s ease; /* Suaviza la transición entre imágenes */
-  }
+.carousel-carouseles {
+  display: flex; 
+  width: 300%; 
+  height: 100%;
+  transition: transform 2s ease; 
+}
   
-  .slider-section {
-    flex: 0 0 calc(100% / 3); /* Divide el ancho del slider por la cantidad de imágenes */
-    height: 100%;
-  }
+.slider-section {
+  flex: 0 0 calc(100% / 3); 
+  height: 100%;
+}
   
-  .slider-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Las imágenes ocuparán todo el contenedor sin deformarse */
-    object-position: center; /* Centra la imagen */
-  }
-  
-  /* Botón para mover el slider hacia la derecha */
-  .carousel__rightBtn {
-    position: absolute;
-    top: 50%;
-    color: white;
-    right: 10px;
-    font-size: 1.5rem;
-    border-radius: 50%;
-    padding: 10px;
-    cursor: pointer;
-    transform: translateY(-50%);
-    z-index: 3;
-  }
-  
-  .carousel__rightBtn:hover {
-    background-color: var(--hover-color);
-  }
-  
-  /* Capa oscura sobre las imágenes */
-  .dark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 6, 74, 0.3);
-    z-index: 1;
-  }
-  
-  /* Presentación de texto en la parte superior del slider */
-  .carousel__presentation {
-    position: absolute;
-    top: 20%;
-    left: 10%;
-    z-index: 2;
-    color: white;
-  }
-  
-  .carousel__presentation h1 {
-    font-size: 2.5rem;
-    color: white;
-  }
-  
-  .carousel__presentation p {
-    font-size: 1.2rem;
-    color: white;
-    margin-top: 10px;
-  }
+.slider-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 
-  .slider-button {
-    display: inline-block;
-    padding: 15px 30px;
-    border-radius: 50px;
-    color: white;
-    font-weight: bold;
-    font-size: 30px;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    background: linear-gradient(90deg, purple, blue);
-    background-size: 200% 200%; 
-    animation: gradient-animation 5s ease infinite;
+.carousel-rightBtn {
+  position: absolute;
+  top: 50%;
+  color: white;
+  right: 10px;
+  font-size: 1.5rem;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  transform: translateY(-50%);
+  z-index: 3;
+}
+  
+.carousel-rightBtn:hover {
+  background-color: var(--hover-color);
+}
+  
+.dark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 6, 74, 0.3);
+  z-index: 1;
+}
+  
+
+.carousel-presentation {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  z-index: 2;
+  color: white;
+}
+  
+.carousel-presentation h1 {
+  font-size: 2.5rem;
+  color: white;
+}
+  
+.carousel-presentation p {
+  font-size: 1.2rem;
+  color: white;
+  margin-top: 10px;
+}
+
+.slider-button {
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 50px;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  background: linear-gradient(90deg, purple, blue);
+  background-size: 200% 200%; 
+  animation: gradient-animation 5s ease infinite;
 }
 
 @keyframes gradient-animation {
-    0% {
-        background-position: 0% 100%;
-    }
-    50% {
-        background-position: 100% 25%; 
-    }
-    100% {
-        background-position: 0% 100%; 
-    }
+  0% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 100% 25%; 
+  }
+  100% {
+    background-position: 0% 100%; 
+  }
 }
 
 .slider-button:hover {
-    transform: scale(1.2);
-    border-color: white;
-    background-color: rgba(255, 255, 255, 0.3);
-    cursor: pointer;
-    box-shadow: 0 10px 25px rgba(0, 6, 74, 0.5);
+  transform: scale(1.2);
+  border-color: white;
+  background-color: rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+  box-shadow: 0 10px 25px rgba(0, 6, 74, 0.5);
 }  
