--- a/frontend/src/assets/styles/pages/home.css
+++ b/frontend/src/assets/styles/pages/home.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: var(--main-color); /* Fondo oscuro en el contenido principal */
+    background-color: var(--main-color); 
 }
 
 .menu-container {
