--- a/frontend/src/assets/styles/pages/joinUs.css
+++ b/frontend/src/assets/styles/pages/joinUs.css
@@ -4,7 +4,6 @@
     --main-color: #00064a;
   }
 
-/* Estilos generales para centrar el contenedor del formulario */
 .JoinUs-page-contein {
     display: flex;
     flex-direction: column;
@@ -40,14 +39,14 @@
 .form-row {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; /* Permite que los campos se ajusten si no hay suficiente espacio */
-    margin-bottom: 30px; /* Espacio entre cada fila de campos */
+    flex-wrap: wrap; 
+    margin-bottom: 30px; 
 }
 
 .form-items-joinUs {
-    flex: 1; /* Cada elemento toma el mismo ancho dentro de la fila */
-    min-width: 45%; /* Ancho mínimo del 45% para que haya dos columnas */
-    margin-bottom: 10px; /* Espacio inferior entre los elementos */
+    flex: 1;
+    min-width: 45%; 
+    margin-bottom: 10px; 
     margin-left: 10px;
 }
 
@@ -55,22 +54,22 @@
 .form-subtitle { 
     color: white; 
     font-size: 35px;
-    font-weight: bold; /* Pone el texto en negrita */
+    font-weight: bold; 
     text-align: center; 
     margin: 0;
 }
 
 .contain-form .ant-input,
 .contain-form .ant-select-selector {
-    background-color: transparent !important; /* Fondo transparente */
-    color: white; /* Color de texto blanco */
-    border: 1px solid white; /* Borde blanco semi-transparente */
+    background-color: transparent !important; 
+    color: white; 
+    border: 1px solid white; 
 }
 
 .contain-form .ant-input:focus,
 .contain-form .ant-select-selector:focus {
-    border-color: transparent; /* Cambiar a color principal al enfocar */
-    box-shadow: -5px 0 15px var(--main-color); /* Agregar sombra para destacar el campo */
+    border-color: transparent; 
+    box-shadow: -5px 0 15px var(--main-color); 
     background-color: transparent !important;
 }
 
@@ -80,108 +79,108 @@
 }
 
 .contain-form .ant-select-selection-placeholder {
-    color: white !important; /* Cambia el color del placeholder a blanco */
+    color: white !important; 
 }
 
 .birth-date-container {
     display: flex;
-    flex-direction: column; /* Apila la etiqueta y el campo verticalmente */
-    align-items: center; /* Centra el contenido horizontalmente */
-    width: 100%; /* Asegúrate de que el contenedor ocupe el 100% del ancho */
+    flex-direction: column; 
+    align-items: center; 
+    width: 100%;
 }
 
 .date-picker-custom {
-    font-size: 16px; /* Ajusta el tamaño de la fuente */
-    padding: 10px; /* Aumenta el espacio interno */
-    height: 48px; /* Ajusta la altura del campo */
+    font-size: 16px;
+    padding: 10px;
+    height: 48px;
     background-color: transparent;
     width: 200px;
     color: white;
 }
 
 .date-picker-custom:hover {
-    background-color: transparent !important; /* Asegura que el fondo se mantenga transparente */
+    background-color: transparent !important; 
 }
 
 .date-picker-custom:focus{
-    border-color: transparent; /* Cambiar a color principal al enfocar */
-    box-shadow: -5px 0 15px var(--main-color); /* Agregar sombra para destacar el campo */
+    border-color: transparent;
+    box-shadow: -5px 0 15px var(--main-color); 
     background-color: transparent !important;
 }
 
 .contain-form .ant-picker,
 .contain-form .ant-select-selector {
-    background-color: transparent !important; /* Fondo transparente */
-    color: white; /* Color de texto blanco */
-    border: 1px solid white; /* Borde transparente */
-    transition: border-color 0.3s, box-shadow 0.3s; /* Transiciones suaves */
+    background-color: transparent !important; 
+    color: white; 
+    border: 1px solid white; 
+    transition: border-color 0.3s, box-shadow 0.3s; 
 }
 
 .contain-form .ant-picker-input > input {
-    background-color: transparent !important; /* Fondo transparente siempre */
-    color: white !important; /* Color de texto en el campo de entrada */
+    background-color: transparent !important; 
+    color: white !important; 
 }
 
 .contain-form .ant-picker-input > input::placeholder {
-    color: white !important; /* Cambia el color del placeholder a blanco */
+    color: white !important;
 }
 
 .contain-form .ant-picker-input > input:focus {
-    background-color: transparent !important; /* Fondo transparente al enfocar */
-    border-color: transparent !important; /* Borde transparente al enfocar */
+    background-color: transparent !important; 
+    border-color: transparent !important; 
 }
 
 .date-picker-custom:hover {
-    background-color: transparent !important; /* Mantener fondo transparente al pasar el ratón */
+    background-color: transparent !important; 
 }
 
 .date-picker-custom svg {
-    fill: white; /* Color blanco en el ícono */
+    fill: white; 
   }
 
 .contain-form .ant-picker:focus,
 .contain-form .ant-picker:focus-within {
-    border-color: transparent; /* Borde transparente al enfocar */
-    box-shadow: 0 0 8px var(--main-color); /* Sombra leve */
+    border-color: transparent;
+    box-shadow: 0 0 8px var(--main-color);
 }  
 
 .contain-form .ant-select-dropdown,
 .contain-form .ant-select-item {
-    background-color: transparent !important; /* Asegura que cada opción también sea transparente */
+    background-color: transparent !important; 
 }
 
 .contain-form .ant-select-selector:focus,
 .contain-form .ant-select-selector:focus-within {
-    border-color: transparent; /* Borde transparente al enfocar */
-    box-shadow: 0 0 8px var(--main-color) !important; /* Sombra leve */
+    border-color: transparent;
+    box-shadow: 0 0 8px var(--main-color) !important; 
 }
 
 .contain-form .ant-select-selector:hover,
 .contain-form .ant-picker:hover {
-    border-color: transparent !important; /* Mantener borde transparente al pasar el ratón */
+    border-color: transparent !important;
 }
 
 .contain-form .buttom-item {
-    display: flex; /* Utiliza flexbox */
-    justify-content: center; /* Centra horizontalmente */
-    width: 300px; /* Asegúrate de que el contenedor ocupe el ancho completo */
+    display: flex; 
+    justify-content: center; 
+    width: 300px; 
 }
 
 #joinUsButton {
-    width: 350px; /* Ancho del botón */
-    background-color: white; /* Color de fondo */
-    color: black; /* Color del texto */
-    border: none; /* Sin borde */
-    border-radius: 15px; /* Bordes redondeados */
-    font-size: 16px; /* Tamaño de fuente */
-    cursor: pointer; /* Cambiar el cursor al pasar el ratón */
-    transition: background-color 0.3s, color 0.3s; /* Transición suave */
-    margin: 10px; /* Centrar el botón y agregar un margen superior */
+    width: 350px; 
+    background-color: white; 
+    color: black; 
+    border: none; 
+    border-radius: 15px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    transition: background-color 0.3s, color 0.3s; 
+    margin: 10px; 
 }
 
 #joinUsButton:hover {
-    background-color: var(--main-color); /* Cambia a color principal al pasar el ratón */
-    color: white; /* Cambia el color del texto a blanco */
+    background-color: var(--main-color); 
+    color: white; 
 }
 
 .imagen-preview span,
@@ -198,10 +197,10 @@
 }
 
 .foto-preview {
-    border-radius: 50%; /* Hacer la imagen circular */
-    width: 100px; /* Ajusta el tamaño según lo que necesites */
+    border-radius: 50%; 
+    width: 100px; 
     height: 100px;
-    object-fit: cover; /* Mantener el aspecto de la imagen */
+    object-fit: cover; 
 }
 
 .back-arrow {
@@ -215,8 +214,7 @@
     z-index: 1 !important;
   }
   
-  /* Animación al pasar el cursor por la flecha */
-  .back-arrow:hover {
-    transform: scale(1.2); /* Aumenta el tamaño un poco */
+.back-arrow:hover {
+    transform: scale(1.2); 
     color: var(--main-color);
 }
