--- a/frontend/src/assets/styles/pages/aboutUS.css
+++ b/frontend/src/assets/styles/pages/aboutUS.css
@@ -57,7 +57,7 @@
     z-index: 1;
 }
 
-.text-container h1{
+.text-container h1 {
     transition: color 0.3s ease; 
     font-size: 2rem;
 }
@@ -77,4 +77,34 @@
 .about-img:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 768px) {
+    .aboutUs-content {
+        padding: 50px 10px; 
+    }
+
+    .about-section {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .text-container {
+        width: 100%; 
+        text-align: center; 
+        margin-bottom: 20px; 
+    }
+
+    .about-img {
+        width: 100%; 
+        margin-top: 20px;
+    }
+
+    .text-container h1 {
+        font-size: 1.5rem;
+    }
+
+    .text-container p {
+        font-size: 14px;
+    }
 }
