--- a/frontend/src/assets/styles/pages/home.css
+++ b/frontend/src/assets/styles/pages/home.css
@@ -84,3 +84,56 @@
         transform: scale(1.2); 
     }
 }
+
+.trabajadores-container {
+    margin-left: 8%;
+    margin-top: 2.2%;
+    width: 70%;                       /* Ancho del contenedor */
+    height: 80%;                      /* Altura del contenedor */
+    display: flex;                    /* Flexbox para organizar los elementos */
+    flex-wrap: wrap;                  /* Permite que los elementos pasen a nuevas filas */
+    gap: 16px;                        /* Espaciado entre elementos */
+    justify-content: center;          /* Centra las tarjetas horizontalmente */
+    align-items: flex-start;          /* Alinea las tarjetas al inicio verticalmente */
+    padding: 30px;
+    position: absolute;               /* Centrar en la pantalla */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-image: url('../../images/836316_preview\ \(1\).jpg');
+    background-size: cover;          /* Ajusta la imagen para cubrir el contenedor */
+    background-repeat: no-repeat;    /* Evita repetir la imagen */
+    background-position: center;     /* Centra la imagen */
+    overflow-y: auto;                /* Habilita el scroll vertical */
+    overflow-x: hidden;              /* Evita el scroll horizontal */
+}
+
+.trabajador-card {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    width: 250px;                    /* Ancho fijo para las tarjetas */
+    padding: 16px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;                    /* Altura ajustable según el contenido */
+    min-height: 200px;               /* Altura mínima */
+    margin: 15px;                    /* Espaciado entre las tarjetas */
+    box-sizing: border-box;          /* Incluye padding y border en el tamaño */
+}
+
+.trabajador-card h3 {
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.trabajador-card p {
+    font-size: 1em;
+    color: #555;
+}
