--- a/frontend/src/assets/styles/pages/home.css
+++ b/frontend/src/assets/styles/pages/home.css
@@ -8,6 +8,35 @@
     width: 100%;
     height: 100vh;
 }
+.search-bar {
+    position: absolute;
+    top: 10px; /* Ajusta según la posición deseada */
+    left: 50%;
+    transform: translateX(-50%); /* Centra la barra horizontalmente */
+    width: 400px; /* Ajusta el ancho de la barra de búsqueda */
+    display: flex;
+    align-items: center;
+    z-index: 1000; /* Para que quede encima del contenido del header */
+    background-color: var(--background-color); /* Puedes ajustar el fondo del contenedor */
+    padding: 10px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    color: black !important;
+}
+
+/* Ajusta el estilo del input dentro de la barra de búsqueda */
+.search-bar .ant-input {
+    width: 300px;
+    padding: 8px;
+    color: black !important;
+}
+
+/* Ajusta el estilo del select en la barra de búsqueda */
+.search-bar .ant-select {
+    margin-left: 10px;
+    color: black !important;
+}
+
 
 .home-page {
     width: 100%;
@@ -88,7 +117,7 @@
 .trabajadores-container {
     margin-left: 8%;
     margin-top: 2.2%;
-    width: 70%;                       /* Ancho del contenedor */
+    width: 80%;                       /* Ancho del contenedor */
     height: 80%;                      /* Altura del contenedor */
     display: flex;                    /* Flexbox para organizar los elementos */
     flex-wrap: wrap;                  /* Permite que los elementos pasen a nuevas filas */
@@ -107,7 +136,7 @@
     background-position: center;     /* Centra la imagen */
     overflow-y: auto;                /* Habilita el scroll vertical */
     overflow-x: hidden;              /* Evita el scroll horizontal */
-    background-image: url('../../images/836316_preview.jpg');
+    background-color: #00064a;
 }
 
 .trabajador-card {
@@ -137,3 +166,4 @@
     font-size: 1em;
     color: #555;
 }
+
