--- a/frontend/src/assets/styles/pages/home.css
+++ b/frontend/src/assets/styles/pages/home.css
@@ -10,32 +10,28 @@
 }
 .search-bar {
     position: absolute;
-    top: 10px; /* Ajusta según la posición deseada */
-    left: 50%;
-    transform: translateX(-50%); /* Centra la barra horizontalmente */
-    width: 400px; /* Ajusta el ancho de la barra de búsqueda */
+    top: 10px;
+    transform: translateX(-30%);
+    width: 100%;
     display: flex;
-    align-items: center;
-    z-index: 1000; /* Para que quede encima del contenido del header */
-    background-color: var(--background-color); /* Puedes ajustar el fondo del contenedor */
-    padding: 10px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    justify-content: space-between; /* Distribuye el espacio entre los elementos */
+    align-items: center; /* Asegura que los elementos estén alineados verticalmente en el centro */
+    z-index: 1000;
+    background-color: var(--background-color); /* Fondo de la barra */
+    padding: 10px 20px;
     border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     color: black !important;
+    flex-wrap: nowrap; /* Evita que los elementos se envuelvan a la siguiente línea */
 }
 
-/* Ajusta el estilo del input dentro de la barra de búsqueda */
-.search-bar .ant-input {
-    width: 300px;
-    padding: 8px;
-    color: black !important;
-}
 
-/* Ajusta el estilo del select en la barra de búsqueda */
-.search-bar .ant-select {
-    margin-left: 10px;
-    color: black !important;
-}
+
+
+
+
+
+
 
 
 .home-page {
